test/corpus/L1/negative/byte-range.st
"---
id: byte-range
kind: negative
phase: parse
layer: L1
spec: anexoA:error.byte-range
origin: spec-ANSI
section: error.byte-range
note: byte array element 256 exceeds valid range 0-255
codes: E_BYTE_RANGE
---"
#[256]
